--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head.vm
@@ -1,18 +1,14 @@
 <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>
-    </title>
-    <!--幼富通 - 首页-->
-    <link href="${staticDomain}/css/reset.css" rel="stylesheet">
-    <link href="${staticDomain}/css/camera.css" rel="stylesheet">
-    <link href="${staticDomain}/css/common.css" rel="stylesheet">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>幼富通 - 注册</title>
+    <link rel="stylesheet" href="${staticDomain}/css/reset.css">
+    <link rel='stylesheet' href='${staticDomain}/css/camera.css'>
+    <link rel="stylesheet" href="${staticDomain}/css/common.css">
     <!--[if lt IE 9]>
-    <script type="text/javascript" src="${staticDomain}/libs/html5.js"></script>
-    
+    <script type="text/javascript" src="${staticDomain}/js/libs/html5.js"></script>
     <![endif]-->
-    <script src="${staticDomain}/libs/jquery.min.js" type="text/javascript"></script>
-    <script src="${staticDomain}/libs/jquery.mobile.customized.min.js" type="text/javascript"></script>
-    <script src="${staticDomain}/libs/jquery.easing.1.3.js" type="text/javascript"></script>
-    <script src="${staticDomain}/libs/camera.min.js" type="text/javascript"></script>
+    <script type='text/javascript' src='${staticDomain}/js/libs/jquery.min.js'></script>
+    <script type='text/javascript' src='${staticDomain}/js/libs/jquery.mobile.customized.min.js'></script>
+    <script type='text/javascript' src='${staticDomain}/js/libs/jquery.easing.1.3.js'></script>
 </head>
