--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header.vm
@@ -1,8 +1,6 @@
-<!--
 <div class="header">
-    <div class="inner clearfix">
-        <div class="logo fl"><a href="javascript:;">幼教金融，一站通</a></div>
-        <div class="partner fr"><img height="60" width="100" src="${staticDomain}/images/partner_header.png"></div>
+    <div class="inner clearfix rel">
+        <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
+        <div class="nav"><a href="javascript:;">登录</a>|<a href="javascript:;">注册</a>|<a class="member" href="javascript:;">我的幼富通</a>|<a class="last" href="javascript:;">帮助</a></div>
     </div>
 </div>
--->
