--- a/ufb.web/src/main/webapp/WEB-INF/templates/layout/_default.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/layout/_default.vm
@@ -2,7 +2,7 @@
 <html>
 #parse("control/common/head.vm")
 <body>
-<div class="container">
+<div id="index" class="container">
 #parse("control/common/header.vm")
 $body
 #parse("control/common/footer.vm")
