--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/register.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/register.vm
@@ -1,30 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!--
 <title>幼富通 - 注册</title>
+-->
 <script>
 $(function(){
-	var tab = $(".tab-org");
-	var panels = $(".register-panels .panel");
-    tab.addClass("on").siblings().removeClass("on");
-    panels.addClass("slide-out").eq(1).removeClass("slide-out");
+	var invtp = $("#invtp_org").val();
+	if("1" == invtp){
+		var tab = $(".tab-org");
+		var panels = $(".register-panels .panel");
+    	tab.addClass("on").siblings().removeClass("on");
+    	panels.addClass("slide-out").eq(1).removeClass("slide-out");
+	}
+	
+	$("form input[type=text]").each(function () {
+        var _this = $(this);
+		if(_this.val()!="") {
+            _this.siblings(".tips-normal").hide();
+        }
+    });
 });
-
-        
-        
 </script>
 </head>
+<%@ taglib prefix="form" uri="http://www.springframework.org/tags/form" %>
 <body>
 <div class="body">
     <div class="inner container-register">
         <div class="register-tabs clearfix">
+			<!--
             <a class="tab tab-family fl on" href="javascript:;">家庭注册</a>
             <a class="tab tab-org fl" href="javascript:;">幼教机构注册</a>
+			-->
+			<a class="tab tab-family fl on" href="javascript:;">A注册</a>
+            <a class="tab tab-org fl" href="javascript:;">B注册</a>
         </div>
         <div class="register-panels">
             <div class="panel panel-family slide-on">
-                <form method="post" action="${staticDomain}/cust/register.htm" id="register-family" class="form-register">
-                    <ul>
+				<!--
+				<form:form modelAttribute="CustinfoVo" method="post">   
+					<form:input path="invtp" items="${CustinfoVo.invtp}"//>
+                -->
+                <form method="post" action="${staticDomain}/cust/register_person.htm" id="register-family" class="form-register">
+					<input id="invtp_person" type="hidden" name="invtp" value="${CustinfoVo.invtp}"/>
+					<ul>
                         <li class="error">
                             <span class="form-title">手机号</span>
                             <input class="input-text" type="text" value="">
@@ -64,55 +83,71 @@ $(function(){
                         </li>
                     </ul>
                 </form>
+				<!--
+				</form:form>
+				-->
             </div>
             <div class="panel panel-org slide-out">
-                <form method="post" action="${staticDomain}/cust/register.htm" id="register-org" class="form-register">
-                    <ul>
+                <form method="post" action="${staticDomain}/cust/register_org.htm" id="register-org" class="form-register">
+                    <input id="invtp_org" type="hidden" name="invtp" value="${CustinfoVo.invtp}"/>
+					<ul>
                         <li
                         #if($errMsg)
                         class="error"
                         #end
                         >
                             <span class="form-title">经办人手机号</span>
-                            <input id="mobileno" name="mobileno" class="input-text" type="text" value="18616502181">
+                            <input id="mobileno" name="mobileno" class="input-text" type="text" value="$!{CustinfoVo.mobileno}">
                             <span class="tips-normal">请输入手机号</span>
                             <span class="tips-check"><i class="icon"></i>$!{errMsg}</span>
                         </li>
                         <li>
                             <span class="form-title">验证码</span>
-                            <input id="verifycode" name="verifycode" class="input-code" type="text" value="1234">
+                            <input id="verifycode" name="verifycode" class="input-code" type="text" value="$!{CustinfoVo.verifycode}">
                             <span class="tips-normal">请输入验证码</span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
                         <li>
                             <span class="form-title">手机验证码</span>
-                            <input id="msgcode" name="msgcode" class="input-code" type="text" value="123456">
+                            <input id="msgcode" name="msgcode" class="input-code" type="text" value="$!{CustinfoVo.msgcode}">
                             <input class="input-button" type="button" value="获取验证码">
                             <span class="tips-normal">6位验证码</span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
                         <li>
                             <span class="form-title">设置新密码</span>
-                            <input id="pswpwd" name="pswpwd" class="input-text" type="text" value="123qwe">
+                            <input id="pswpwd" name="pswpwd" class="input-text" type="text" value="$!{CustinfoVo.pswpwd}">
                             <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
                         <li>
                             <span class="form-title">确认新密码</span>
-                            <input id="pswpwd2" name="pswpwd2" class="input-text" type="text" value="123qwe">
+                            <input id="pswpwd2" name="pswpwd2" class="input-text" type="text" value="$!{CustinfoVo.pswpwd2}">
                             <span class="tips-normal">请再次输入密码</span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
                         <li>
+							<!--
                             <span class="form-title">幼教机构名称</span>
+							-->
+							<span class="form-title">名称</span>
                             <input class="input-text" type="text" value="">
-                            <span class="tips-normal">请按照营业执照填写</span>
+							<!--
+							<span class="tips-normal">请按照营业执照填写</span>
+							-->
+                            <span class="tips-normal">请填写名称信息</span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
                         <li>
-                            <span class="form-title">营业执照注册号</span>
+							<!--
+							<span class="form-title">营业执照注册号</span>
+							-->
+                            <span class="form-title">其他</span>
                             <input class="input-text" type="text" value="">
-                            <span class="tips-normal">请按照营业执照填写</span>
+							<!--
+							<span class="tips-normal">请按照营业执照填写</span>
+							-->
+                            <span class="tips-normal">请填写其他信息</span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
                         <li>
