--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/register.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/register.vm
@@ -20,6 +20,17 @@ $(function(){
             _this.siblings(".tips-normal").hide();
         }
     });
+	
+	
+	$("#btn-org").on("click",function(){
+		//check #form-org #mobileno
+		
+		
+		
+		$("#form-org").submit();
+		
+		
+	});
 });
 </script>
 </head>
@@ -50,26 +61,26 @@ $(function(){
                             <span class="tips-normal">请输入手机号</span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
-                        <li class="ok">
+                        <li class="error">
                             <span class="form-title">验证码</span>
                             <input class="input-code" type="text" value="">
                             <span class="tips-normal">请输入验证码</span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
-                        <li>
+                        <li class="error">
                             <span class="form-title">手机验证码</span>
                             <input class="input-code" type="text" value="">
                             <span class="tips-normal">6位验证码</span>
                             <input class="input-button" type="button" value="获取验证码">
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
-                        <li>
+                        <li class="error">
                             <span class="form-title">设置新密码</span>
                             <input class="input-text" type="text" value="">
                             <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
-                        <li>
+                        <li class="error">
                             <span class="form-title">确认新密码</span>
                             <input class="input-text" type="text" value="">
                             <span class="tips-normal">请再次输入密码</span>
@@ -88,18 +99,18 @@ $(function(){
 				-->
             </div>
             <div class="panel panel-org slide-out">
-                <form method="post" action="${staticDomain}/cust/register_org.htm" id="register-org" class="form-register">
+                <form id="form-org" method="post" action="${staticDomain}/cust/register_org.htm" id="register-org" class="form-register">
                     <input id="invtp_org" type="hidden" name="invtp" value="${CustinfoVo.invtp}"/>
 					<ul>
                         <li
-                        #if($errMsg)
+                        #if($errMsg_mobileno)
                         class="error"
                         #end
                         >
                             <span class="form-title">经办人手机号</span>
                             <input id="mobileno" name="mobileno" class="input-text" type="text" value="$!{CustinfoVo.mobileno}">
                             <span class="tips-normal">请输入手机号</span>
-                            <span class="tips-check"><i class="icon"></i>$!{errMsg}</span>
+                            <span class="tips-check"><i class="icon"></i>$!{errMsg_mobileno}</span>
                         </li>
                         <li>
                             <span class="form-title">验证码</span>
@@ -114,47 +125,46 @@ $(function(){
                             <span class="tips-normal">6位验证码</span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
-                        <li>
+                        <li
+                        #if($errMsg_pswpwd)
+                        class="error"
+                        #end
+                        >
                             <span class="form-title">设置新密码</span>
                             <input id="pswpwd" name="pswpwd" class="input-text" type="text" value="$!{CustinfoVo.pswpwd}">
                             <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
-                            <span class="tips-check"><i class="icon"></i>验证提示</span>
+                            <span class="tips-check"><i class="icon"></i>$!{errMsg_pswpwd}</span>
                         </li>
-                        <li>
+                        <li
+                        #if($errMsg_pswpwd2)
+                        class="error"
+                        #end
+                        >
                             <span class="form-title">确认新密码</span>
                             <input id="pswpwd2" name="pswpwd2" class="input-text" type="text" value="$!{CustinfoVo.pswpwd2}">
                             <span class="tips-normal">请再次输入密码</span>
-                            <span class="tips-check"><i class="icon"></i>验证提示</span>
+                            <span class="tips-check"><i class="icon"></i>$!{errMsg_pswpwd2}</span>
                         </li>
                         <li>
-							<!--
                             <span class="form-title">幼教机构名称</span>
-							-->
-							<span class="form-title">名称</span>
                             <input class="input-text" type="text" value="">
-							<!--
 							<span class="tips-normal">请按照营业执照填写</span>
-							-->
-                            <span class="tips-normal">请填写名称信息</span>
-                            <span class="tips-check"><i class="icon"></i>验证提示</span>
+                            <span class="tips-check"><i class="icon"></i>$!{errMsg_organization}</span>
                         </li>
                         <li>
-							<!--
 							<span class="form-title">营业执照注册号</span>
-							-->
-                            <span class="form-title">其他</span>
                             <input class="input-text" type="text" value="">
-							<!--
 							<span class="tips-normal">请按照营业执照填写</span>
-							-->
-                            <span class="tips-normal">请填写其他信息</span>
-                            <span class="tips-check"><i class="icon"></i>验证提示</span>
+                            <span class="tips-check"><i class="icon"></i>$!{errMsg_business}</span>
                         </li>
                         <li>
                             <label><input class="input-checkbox" type="checkbox">我已阅读并同意<a href="javascript:;">《幼富通用户注册协议》</a></label>
                         </li>
                         <li>
+							<!--
                             <input class="input-button ok" type="submit" value="注&nbsp;册">
+							-->
+							<input id="btn-org" class="input-button ok" type="button" value="注&nbsp;册">
                         </li>
                     </ul>
                 </form>
