--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header.vm
@@ -1,8 +1,11 @@
-<!--
 <div class="header">
     <div class="inner clearfix rel">
         <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
-        <div class="nav"><a href="javascript:;">登录</a>|<a href="javascript:;">注册</a>|<a class="member" href="javascript:;">我的幼富通</a>|<a class="last" href="javascript:;">帮助</a></div>
+        <div class="nav">
+			<a 
+				href="javascript:;">登录</a>|<a 
+				href="${staticDomain}/cust/register.htm">注册</a>|<a class="member" 
+				href="javascript:;">我的幼富通</a>|<a class="last" 
+				href="javascript:;">帮助</a></div>
     </div>
 </div>
--->
