--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/register.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/register.vm
@@ -36,6 +36,17 @@ $(function(){
 </head>
 <%@ taglib prefix="form" uri="http://www.springframework.org/tags/form" %>
 <body>
+<div class="container">
+<div class="header">
+    <div class="inner clearfix rel">
+        <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
+        <div class="nav"><a 
+			href="javascript:;">登录</a>|<a 
+			href="${staticDomain}/cust/register.htm">注册</a>|<a class="member" 
+			href="javascript:;">我的幼富通</a>|<a class="last" 
+			href="javascript:;">帮助</a></div>
+    </div>
+</div>
 <div class="body">
     <div class="inner container-register">
         <div class="register-tabs clearfix">
@@ -145,15 +156,23 @@ $(function(){
                             <span class="tips-normal">请再次输入密码</span>
                             <span class="tips-check"><i class="icon"></i>$!{errMsg_pswpwd2}</span>
                         </li>
-                        <li>
-                            <span class="form-title">幼教机构名称</span>
-                            <input class="input-text" type="text" value="">
+						<li
+                        #if($errMsg_organization)
+                        class="error"
+                        #end
+                        >
+							<span class="form-title">幼教机构名称</span>
+							<input id="organization" name="organization" class="input-text" type="text" value="$!{CustinfoVo.organization}">
 							<span class="tips-normal">请按照营业执照填写</span>
                             <span class="tips-check"><i class="icon"></i>$!{errMsg_organization}</span>
                         </li>
-                        <li>
+                        <li
+                        #if($errMsg_business)
+                        class="error"
+                        #end
+                        >
 							<span class="form-title">营业执照注册号</span>
-                            <input class="input-text" type="text" value="">
+							<input id="business" name="business" class="input-text" type="text" value="$!{CustinfoVo.business}">
 							<span class="tips-normal">请按照营业执照填写</span>
                             <span class="tips-check"><i class="icon"></i>$!{errMsg_business}</span>
                         </li>
@@ -171,6 +190,40 @@ $(function(){
             </div>
         </div>
     </div>
+</div>
+<div class="footer">
+    <div class="inner clearfix">
+        <div class="notice fl">
+            <h2 class="title">理财机构须知</h2>
+            <ul class="list">
+                <li><a href="javascript:;">幼教机构如何注册幼富通？</a></li>
+                <li><a href="javascript:;">如何购买幼富通的机构理财产品？</a></li>
+                <li><a href="javascript:;">机构理财的交易安全有什么保障？</a></li>
+                <li><a href="javascript:;">如何联系我们？</a></li>
+            </ul>
+        </div>
+        <div class="qa fl">
+            <h2 class="title">常见问题</h2>
+            <ul class="list">
+                <li><a href="javascript:;">什么是机构理财专户？</a></li>
+                <li><a href="javascript:;">什么是幼富宝？</a></li>
+                <li><a href="javascript:;">购买幼富宝有什么好处？</a></li>
+            </ul>
+        </div>
+        <div class="about fl">
+            <h2 class="title"><a href="about.html">关于幼富通&nbsp;<span>|</span></a></h2>
+            <div class="info">
+                <p>微信服务号：UFUfund</p>
+                <p>服务邮箱：<a href="mailto:service@ufufund.com">service@ufufund.com</a></p>
+                <p>海富通产品：400-8840-099</p>
+            </div>
+            <div class="copyright">
+                <p>上海泛投信息科技有限公司版权所有 ©2015</p>
+                <p><a target="_blank" href="http://www.miitbeian.gov.cn/">沪ICP备14054347号</a></p>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
 <script src="${staticDomain}/js/scripts/load.js"></script>
 </body>
