--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/register.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/register.vm
@@ -23,13 +23,8 @@ $(function(){
 	
 	
 	$("#btn-org").on("click",function(){
-		//check #form-org #mobileno
-		
-		
-		
-		$("#form-org").submit();
-		
-		
+		//check #register-org #mobileno
+		$("#register-org").submit();
 	});
 });
 </script>
@@ -63,7 +58,7 @@ $(function(){
 				<form:form modelAttribute="CustinfoVo" method="post">   
 					<form:input path="invtp" items="${CustinfoVo.invtp}"//>
                 -->
-                <form method="post" action="${staticDomain}/cust/register_person.htm" id="register-family" class="form-register">
+                <form method="post" action="${staticDomain}/cust/register_person.htm" id="register-family" class="form-register common-form">
 					<input id="invtp_person" type="hidden" name="invtp" value="${CustinfoVo.invtp}"/>
 					<ul>
                         <li class="error">
@@ -110,7 +105,7 @@ $(function(){
 				-->
             </div>
             <div class="panel panel-org slide-out">
-                <form id="form-org" method="post" action="${staticDomain}/cust/register_org.htm" id="register-org" class="form-register">
+                <form method="post" action="${staticDomain}/cust/register_org.htm" id="register-org" class="form-register common-form">
                     <input id="invtp_org" type="hidden" name="invtp" value="${CustinfoVo.invtp}"/>
 					<ul>
                         <li
